--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<link href="https://corescript.neocities.org/favicon.png" rel="icon">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+	</script>
+	<script src="https://code.jquery.com/jquery-1.12.4.js">
+	</script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js">
+	</script>
+	<script src="/js/index.js">
+	</script>
+  <link rel="stylesheet" type="text/css" href="/css/index.css">
+	
+	<title>CoreScript 9.0</title>
+</head>
+<body>
+	<div id="menu">
+		<button class="runbutton" id="runbutton" onclick="runcode()" title="Run">Run</button> <button class="runbutton2" id="runbutton" onclick="save()" title="Save">Save</button> <button class="runbutton3" id="runbutton" onclick="document.getElementById('fileInput').click()" title="Open">Open</button> <button class="runbutton4" id="runbutton" onclick="share()" title="Share">Share</button> <button class="runbutton5" id="runbutton" onclick="settings()" title="Settings">Settings</button>
+	</div>
+	<div id="lines">
+		<div style="line-height:14%;">
+			<br>
+		</div>
+		<div id="codelines"></div>
+	</div>
+	<textarea id="code" onkeydown=""></textarea>
+	<div id="outputbox">
+		<p id="output"></p>
+	</div>
+	<div id="popup">
+		<div id="draggy" style="width: 100%; height: 20px; border: transparent; background-color: lightgrey; cursor: move;">
+			<button class="close" onclick='document.getElementById("popup").style.visibility = "hidden";'>X</button>
+		</div>
+		<p id="popuptext"></p>
+	</div>
+	<div id="console"></div>
+	<form>
+		<input accept=".corescript" id="fileInput" multiple="false" style="display:none;" type="file"> 
+		<div id="settings">
+		<button class="close" onclick='document.getElementById("settings").style.visibility = "hidden";'>X</button> <!-- 
+</fieldset>
+    <br>
+    <fieldset>
+        <legend>Add Plugin (Unfinished)</legend>
+        <p>Want to make your own plugin? Upload one here. You might want to read the <a href="google.com">documentary</a> first.</p>
+        
+        <input style="border: 1px solid black" type="file" id="plugin_file" multiple="false" accept=".js" type="file" value="Upload Javascript File">
+        <br><br>
+        <button onclick="load()">Load Plugin</button>
+    </fieldset>
+     -->
+	</div><!-- Many lines of code! -->
+</body>
+</html>
