--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	</script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js">
 	</script>
-	<script src="/js/index.js">
+	<script src="https://pufflegamerz.github.io/corescript/js/index.js">
 	</script>
-  <link rel="stylesheet" type="text/css" href="/css/index.css">
+  <link rel="stylesheet" type="text/css" href="https://pufflegamerz.github.io/corescript/css/index.css">
 	
 	<title>CoreScript 9.0</title>
 </head>
