--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<button onclick="exec()">Run</button>
 <br>
+<div id="counter">
+
+</div>
 <div id="overlay">
 	
 </div>
 <textarea id="code" spellcheck="false">
-var value = test
-if value = test:4
-print 1
-print 2
+print Hello!
 </textarea>
 <div id="result">
-	
+	<div id="bar">
+		<div id="go" onclick="exec()"></div>
+		<div id="download" onclick="download()"></div>
+		<div id="settings" onclick="settings()"></div>
+		<div id="player">
+			
+		</div>
+	</div>
 </div>
 </body>
 </html>
